# NeuronMetrics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CCF/: Mouse.csv  annotation_25_float32.7z  intensityValue2regionName.txt
apps/nmConsole/: main.cpp
benchmark/: CMakeLists.txt  main.cpp
include/: nmMetricsEngine.h  nmMouseCCF.h  nmNeuron.h  nmNode.h  nmSegment.h  nmUtilities.h
include/foundation/: nmAxonProjectionAnalyzer.h  nmExceptions.h  nmMouseCCF.h  nmNeuron.h  nmNode.h  nmSegment.h
include/io/: nmSWCReader.h
src/: nmAxonProjectionAnalyzer.cpp  nmMetricsEngine.cpp  nmMouseCCF.cpp  nmNeuron.cpp  nmNode.cpp  nmSWCReader.cpp  nmUtilities.cpp
